# HW3

HW3Q1/: ReadMe.md
HW3Q2/: CMakeLists.txt  console_log.txt  hw3-2.cpp
HW3Q3/: CMakeLists.txt  console_log.txt  hw3-3.cpp
HW3Q4/: CMakeLists.txt  console_log.txt  hw3-4.cpp
